[package]
name = "bittorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2"
sha1 = "0.10.1"
hex = "0.4.3"
chrono = "0.4"
rand = "0.8.4"
gtk4 = "0.4.8"

[[bin]]
name = "app"
path = "ui/app.rs"

[[bin]]
name = "main"
path = "src/main.rs"